--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'com.google.guava', name: 'guava', version: '18.0'
+    testCompile 'org.assertj:assertj-core:3.6.2'
     jmh 'org.hdrhistogram:HdrHistogram:2.1.8'
 }
 
