--- a/build.gradle
+++ b/build.gradle
@@ -15,12 +15,12 @@ apply plugin: 'java'
 apply plugin: 'me.champeau.gradle.jmh'
 
 jmh {
-    include = '.*SearchPerformance.*'
+    include = 'PerformanceTest.addNodes'
     //include '.*'
     jmhVersion = '1.12'
     warmupIterations = 8
     iterations = 5
-    fork = 3
+    fork = 1
     timeUnit = 'ns'
     forceGC = true // Should JMH force GC between iterations?
     jvmArgs = "-XX:+UnlockCommercialFeatures -XX:+FlightRecorder -XX:StartFlightRecording=duration=60s,filename=myrecording.jfr -XX:+UnlockDiagnosticVMOptions -XX:+DebugNonSafepoints"
