--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
-include ':core'
+include 'core'
+include 'javafx-renderer'
 
 rootProject.name = 'salix'
 
 project(":core").buildFileName = "core.gradle"
-include 'javafx-renderer'
 
