--- a/core/core.gradle
+++ b/core/core.gradle
@@ -1,3 +1,4 @@
+/*
 plugins {
     id "com.ofg.uptodate" version "1.1.0"
     id 'me.champeau.gradle.jmh' version '0.3.0'
@@ -18,19 +19,19 @@ jmh {
     //jvmArgs = '-XX:+UseG1GC'
 }
 
-
+*/
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testCompile group: 'com.google.guava', name: 'guava', version: '18.0'
     testCompile 'org.assertj:assertj-core:3.6.2'
-    jmh 'org.hdrhistogram:HdrHistogram:2.1.8'
+    //jmh 'org.hdrhistogram:HdrHistogram:2.1.8'
 }
 
 ext {
     javaCompilerExecutable = System.env['JAVA_HOME'] ? System.env['JAVA_HOME'] + '/bin/javac' : 'javac'
 }
-
+/*
 compileJmhJava {
     options.compilerArgs << '-XDignore.symbol.file'
     options.fork = true
@@ -38,3 +39,4 @@ compileJmhJava {
     options.forkOptions.executable = javaCompilerExecutable
     options.warnings = false
 }
+*/
