--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,14 @@
+buildscript {
+    repositories {
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
+    }
+    dependencies {
+        classpath "net.ltgt.gradle:gradle-errorprone-plugin:0.0.11"
+    }
+}
+
 group 'se.fearless'
 
 version '1.0-SNAPSHOT'
@@ -5,6 +16,7 @@ version '1.0-SNAPSHOT'
 
 subprojects {
     apply plugin: 'java'
+    apply plugin: 'net.ltgt.errorprone'
 
     sourceCompatibility = 1.8
 
